<resources>

    <!-- Main Menu-->
    <string name="app_name">DICOM Segmentation</string>
    <string name="action_settings">Application Settings</string>
    <string name="action_exportDB">Export Database</string>
    <string name="action_resetDB">Reset Database</string>
    <string name="action_exit">Exit</string>

    <!-- Floating Menu -->
    <string name="float_menu_note">General Note</string>
    <string name="float_menu_point_note">Point Note</string>
    <string name="float_menu_segment">Segment</string>
    <string name="float_menu_adjust">Auto Adjust</string>
    <string name="float_menu_show">Show</string>

    <!-- Reset Database Dialog-->
    <string name="resetDB_title">Reset Database</string>
    <string name="resetDB_message">Are you sure you want to delete all data from database?</string>

    <!-- FileChooserActivity -->
    <string name="title_activity_file_chooser">FileChooserActivity</string>
    <string name="selectfile_title">Select DICOM file:</string>

    <!-- SelectDicomImageActivity -->
    <string name="title_activity_select_dicom_image">SelectDicomImageActivity</string>

    <!-- NotesActivity -->
    <string name="title_activity_notes">NotesActivity</string>

    <!-- PointNoteActivity -->
    <string name="title_activity_point_note">PointNoteActivity</string>
    <string name="pointnote_adding">Adding point note</string>
    <string name="pointnote_tap_to_add">Tap the image point where you want to add a note</string>

    <!-- DicomViewActivity -->
    <string name="title_activity_dicom_view">DicomViewActivity</string>
    <string name="dicomview_textinfo_default">Press + to display options</string>
    <string name="dicomview_select_reference_point">Tap a reference point for this segmentation</string>

    <!-- SelectSegmentationActivity -->
    <string name="title_activity_select_segmentation">SelectSegmentation</string>
    <string name="label_activity_select_segmentation">Select segmentation type</string>
    <string name="button_ivus">IVUS</string>
    <string name="button_braintumor">Brain Tumor</string>
    <string name="button_retinography">Retinography</string>
    <string name="button_carotid">Carotid</string>

    <!-- IVUSSegActivity -->
    <string name="title_activity_ivusseg">IVUSSegActivity</string>
    <string name="label_activity_ivusseg">Select IVUS segmentation type</string>
    <string name="button_ivusLI">LI (Lumen-Intima)</string>
    <string name="button_ivusMA">MA (Media-Adventitia)</string>

    <!-- BrainTumorSegActivity -->
    <string name="title_activity_selectable_pole_seg">BrainTumorSegActivity</string>
    <string name="label_activity_brain_tumor_seg">Select brain tumor segmentation type</string>
    <string name="button_brainTumorNecrosis">Necrosis</string>
    <string name="button_brainTumorBorder">Tumor Border</string>

    <!-- RetinographySegActivity -->
    <string name="title_activity_retinography_seg">RetinographySegActivity</string>
    <string name="label_activity_retinography_seg">Select retinography segmentation type</string>
    <string name="button_opticdisc">Optic Disc</string>
    <string name="button_vessels">Vessels</string>

    <!-- CarotidSegActivity -->
    <string name="title_activity_carotid_seg">CarotidSegActivity</string>
    <string name="label_activity_carotid_seg">Select carotid segmentation type</string>
    <string name="button_carotid_anteriorLI">LI (Lumen-Intima) Anterior</string>
    <string name="button_carotid_posteriorLI">LI (Lumen-Intima) Posterior</string>
    <string name="button_carotid_ma_posterior">MA (Media-Adventitia) Posterior</string>

    <!-- AdjustSegmentationActivity -->
    <string name="title_activity_adjust_segmentation">AdjustSegmentationActivity</string>
    <string name="adjustsegmentation_title">Select segmentation to adjust:</string>

    <!-- Buttons -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Done</string>
    <string name="button_clear">Clear</string>
    <string name="button_keepAdjustment">Save</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- General Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_general_stroke_thickness">Stroke Thickness</string>
    <string name="pref_title_general_continuity_factor">Continuity Tolerance</string>
    <string name="pref_title_general_closed_contour_tolerance">Closed Contour Tolerance</string>

    <string name="pref_default_general_stroke_thickness">2</string>
    <string name="pref_default_general_continuity_factor">4</string>
    <string name="pref_default_general_closed_contour_tolerance">8</string>


    <!-- Snakes Coefficients -->
    <string name="pref_header_snakes_coefficients">Snakes Coefficients</string>
    <string name="pref_title_sc_alpha">Alpha</string>
    <string name="pref_title_sc_beta">Beta</string>
    <string name="pref_title_sc_gamma">Gamma</string>
    <string name="pref_title_sc_delta">Delta</string>

    <string name="pref_default_sc_alpha">1.1</string>
    <string name="pref_default_sc_beta">1.2</string>
    <string name="pref_default_sc_gamma">1.5</string>
    <string name="pref_default_sc_delta">3.0</string>

    <!-- Errors -->
    <string name="empty_segmentation">Empty segmentation</string>
    <string name="closed_contour_error">This segmentation requires to be a closed contour</string>
    <string name="interiority_error">All segmentation points must be inside %s</string>
    <string name="exteriority_error">All segmentation points must be outside %s</string>
    <string name="continuity_error">Ending or starting point must be matched to continue with segmentation</string>
    <string name="existing_segmentation_error">A segmentation of this type already exists for this frame</string>
    <string name="not_above_error">All segmentation points must be above %s</string>
    <string name="not_below_error">All segmentation points must be below %s</string>
    <string name="points_minimum_quantity_error">Segmentation does not reach minimum required points quantity</string>
    <string name="frame_number_out_of_range_error">The entered number is out of range</string>

</resources>
