<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_select_segmentation"
    tools:context="edu.exa.unicen.dicomseg.activities.SelectSegmentationActivity">

    <TextView android:id="@+id/textInfoSelectSegType"
        android:text="@string/label_activity_select_segmentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_title_margin_bottom"
        android:textStyle="bold" />

    <Button android:id="@+id/ivusSeg"
        android:text="@string/button_ivus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_button_margin_bottom"
        android:layout_below="@+id/textInfoSelectSegType"
        android:background="@drawable/buttons"/>

    <Button android:id="@+id/brainTumor"
        android:text="@string/button_braintumor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_button_margin_bottom"
        android:layout_below="@+id/ivusSeg"
        android:background="@drawable/buttons"/>

    <Button android:id="@+id/retinography"
        android:text="@string/button_retinography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_button_margin_bottom"
        android:layout_below="@+id/brainTumor"
        android:background="@drawable/buttons"/>

    <Button android:id="@+id/carotid"
        android:text="@string/button_carotid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_button_margin_bottom"
        android:layout_below="@+id/retinography"
        android:background="@drawable/buttons"/>

</RelativeLayout>
