<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_retinography_seg"
    tools:context="edu.exa.unicen.dicomseg.activities.RetinographySegActivity">

    <TextView android:id="@+id/textInfoRetinography"
        android:text="@string/label_activity_retinography_seg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_title_margin_bottom"
        android:textStyle="bold" />

    <Button android:id="@+id/opticDisc"
        android:text="@string/button_opticdisc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_button_margin_bottom"
        android:layout_below="@+id/textInfoRetinography"
        android:background="@drawable/buttons"/>

    <Button android:id="@+id/vessels"
        android:text="@string/button_vessels"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/select_segmentation_button_margin_bottom"
        android:layout_below="@+id/opticDisc"
        android:background="@drawable/buttons"/>

</RelativeLayout>
